--- a/KretaWindowsAlkalmazas/KretaWindowsAlkalmazas.csproj
+++ b/KretaWindowsAlkalmazas/KretaWindowsAlkalmazas.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Kreta</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KretaParancsosiAlkalmazas\KretaParancssoriAlkalmazas.csproj" />
+  </ItemGroup>
+
 </Project>
