--- a/KretaParancsosiAlkalmazas/KretaParancssoriAlkalmazas.csproj
+++ b/KretaParancsosiAlkalmazas/KretaParancssoriAlkalmazas.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Kreta</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+  </ItemGroup>
+
 </Project>
