--- a/KretaParancsosiAlkalmazas/KretaParancssoriAlkalmazas.csproj
+++ b/KretaParancsosiAlkalmazas/KretaParancssoriAlkalmazas.csproj
@@ -19,6 +19,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Repositories\Interfaces\ICRUDRepository.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Repositories\Interfaces\ICRUDRepository.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.17" />
   </ItemGroup>
