--- a/KretaWebApi/KretaWebApi.csproj
+++ b/KretaWebApi/KretaWebApi.csproj
@@ -8,9 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="NLog" Version="5.0.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KretaParancsosiAlkalmazas\KretaParancssoriAlkalmazas.csproj" />
     <ProjectReference Include="..\KretaWEbApiLoggerService\KretaWEbApiLoggerService.csproj" />
   </ItemGroup>
 
