--- a/KretaWebApi/appsettings.json
+++ b/KretaWebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "mysqlconnection": {
+    "connectionString": "server=localhost;userid=root;password=;database=kreata;"
+  },
   "AllowedHosts": "*"
 }
