--- a/KretaWebApiOld/appsettings.json
+++ b/KretaWebApiOld/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "mysqlconnection": {
-    "connectionString": "server=localhost;userid=root;password=;database=kreta;"
+    "connectionString": "server=localhost;userid=root;password=;database=kreata;"
   },
   "AllowedHosts": "*"
 }
