--- a/KretaWebApi/nlog.config
+++ b/KretaWebApi/nlog.config
@@ -2,7 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Error"
+      internalLogLevel="Trace"
       internalLogFile="F:\OneDrive\Develop\csarp-java-develop\csarp-kreta\internal_logs\internallog.txt">
 	<targets>
 		<target name="logfile" xsi:type="File"
