--- a/KretaWebApi/KretaWebApi.csproj
+++ b/KretaWebApi/KretaWebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -19,5 +19,10 @@
     <ProjectReference Include="..\KretaWebApiContracts\KretaWebApiContracts.csproj" />
     <ProjectReference Include="..\KretaWEbApiLoggerService\KretaWEbApiLoggerService.csproj" />
   </ItemGroup>
+
+  <Target Name="CreateLogsFolder" AfterTargets="Publish">
+		<MakeDir Directories="$(PublishDir)logs"
+				  Condition="!Exists('$(PublishDir)logs')" />
+   </Target>
 
 </Project>
