--- a/KretaWebApi/appsettings.json
+++ b/KretaWebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "mysqlconnection": {
-    "connectionString": "server=localhost;userid=root;password=;database=kreta;"
+    "connectionString": "server=cskstudiorumkft.x10.mx;userid=zbccmner_kreta;password=Kreta1;database=zbccmner_kreta;"
   },
   "AllowedHosts": "*"
 }
