--- a/KretaWebApi/nlog.config
+++ b/KretaWebApi/nlog.config
@@ -2,14 +2,15 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Trace"
-      internalLogFile="F:\OneDrive\Develop\csarp-java-develop\csarp-kreta\internal_logs\internallog.txt">
+	        throwExceptions="true"
+      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
 	<targets>
-		<target name="logfile" xsi:type="File"
-				fileName="F:\OneDrive\Develop\csarp-java-develop\csarp-kreta\logs/${shortdate}_logfile.txt"
-				layout="${longdate} ${level:uppercase=true} ${message}"/>
+		<target xsi:type="File" name="fileTarget" fileName="${basedir}/logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
+		<target xsi:type="ColoredConsole" name="consoleTarget"  layout="${longdate} ${uppercase:${level}} ${message}" />
 	</targets>
 	<rules>
-		<logger name="*" minlevel="Debug" writeTo="logfile" />
+		<logger name="*" minlevel="Trace" writeTo="consoleTarget" />
+		<logger name="Microsoft.*" maxlevel="Info" final="true" />
+		<logger name="*" minlevel="Trace" writeTo="fileTarget" />
 	</rules>
 </nlog>
