--- a/KretaRazorPages/KretaRazorPages.csproj
+++ b/KretaRazorPages/KretaRazorPages.csproj
@@ -10,14 +10,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.8" />
     <PackageReference Include="Microsoft.Extensions.Localization" Version="6.0.8" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ApplicationProperties\ApplicationPropertiesSettings.csproj" />
     <ProjectReference Include="..\KretaParancssoriAlkalmazas\KretaParancssoriAlkalmazas.csproj" />
-    <ProjectReference Include="..\KretaWebApiContracts\KretaWebApiContracts.csproj" />
-    <ProjectReference Include="..\KretaWEbApiLoggerService\KretaWEbApiLoggerService.csproj" />
+    <ProjectReference Include="..\ServiceKretaAPI\ServiceKretaAPI.csproj" />
+    <ProjectReference Include="..\ServiceKretaLogger\ServiceKretaLogger.csproj" />
   </ItemGroup>
 
   <ItemGroup>
