--- a/KretaWebApi/KretaWebApi.csproj
+++ b/KretaWebApi/KretaWebApi.csproj
@@ -9,20 +9,18 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\KretaParancssoriAlkalmazas\KretaParancssoriAlkalmazas.csproj" />
-    <ProjectReference Include="..\KretaWebApiContracts\KretaWebApiContracts.csproj" />
-    <ProjectReference Include="..\KretaWEbApiLoggerService\KretaWEbApiLoggerService.csproj" />
+    <ProjectReference Include="..\ServiceKretaAPI\ServiceKretaAPI.csproj" />
+    <ProjectReference Include="..\ServiceKretaLogger\ServiceKretaLogger.csproj" />
   </ItemGroup>
 
   <Target Name="CreateLogsFolder" AfterTargets="Publish">
-		<MakeDir Directories="$(PublishDir)logs"
-				  Condition="!Exists('$(PublishDir)logs')" />
+		<MakeDir Directories="$(PublishDir)logs" Condition="!Exists('$(PublishDir)logs')" />
    </Target>
 
 </Project>
