--- a/ServiceKretaAPI/ServiceKretaAPI.csproj
+++ b/ServiceKretaAPI/ServiceKretaAPI.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApplicationProperties\ApplicationPropertiesSettings.csproj" />
     <ProjectReference Include="..\KretaParancssoriAlkalmazas\KretaParancssoriAlkalmazas.csproj" />
   </ItemGroup>
 
