--- a/ServiceKretaLogger/ServiceKretaLogger.csproj
+++ b/ServiceKretaLogger/ServiceKretaLogger.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,10 +8,6 @@
 
   <ItemGroup>
     <PackageReference Include="NLog" Version="5.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\KretaWebApiContracts\KretaWebApiContracts.csproj" />
   </ItemGroup>
 
 </Project>
