Soring parancs működik

--- a/KretaDesktop/KretaDesktop.csproj
+++ b/KretaDesktop/KretaDesktop.csproj
@@ -9,6 +9,17 @@
 
   <ItemGroup>
     <None Remove="App.config" />
+    <None Remove="Resources\icons\sort-alpha-down.png" />
+    <None Remove="Resources\icons\sort-alpha-up-alt.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\icons\sort-alpha-down.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\icons\sort-alpha-up-alt.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
@@ -20,15 +31,6 @@
     <ProjectReference Include="..\KretaParancssoriAlkalmazas\KretaParancssoriAlkalmazas.csproj" />
     <ProjectReference Include="..\ServiceKretaAPI\ServiceKretaAPI.csproj" />
     <ProjectReference Include="..\StaticClasses\StaticClasses.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Resources\icons\sort-alpha-down.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Resources\icons\sort-alpha-up-alt.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
