A validációnál a magyar és angol nyelv működik, propertiesek átrendezve

--- a/KretaDesktop/KretaDesktop.csproj
+++ b/KretaDesktop/KretaDesktop.csproj
@@ -33,4 +33,10 @@
     <ProjectReference Include="..\StaticClasses\StaticClasses.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Page Update="Localization\Resources\en-En\StringResources.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+  </ItemGroup>
+
 </Project>
