--- a/KretaWebApi/Dockerfile
+++ b/KretaWebApi/Dockerfile
@@ -24,4 +24,8 @@ RUN dotnet publish "KretaWebApi.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+# flyctl
+EXPOSE 5000
+ENV ASPNETCORE_URLS=http://+:5000
+# flyctl
 ENTRYPOINT ["dotnet", "KretaWebApi.dll"]
