--- a/KretaWebApi/Dockerfile
+++ b/KretaWebApi/Dockerfile
@@ -1,11 +1,11 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
 WORKDIR /src
 COPY ["KretaWebApi/KretaWebApi.csproj", "KretaWebApi/"]
 COPY ["KretaParancssoriAlkalmazas/KretaParancssoriAlkalmazas.csproj", "KretaParancssoriAlkalmazas/"]
@@ -23,7 +23,8 @@ RUN dotnet publish "KretaWebApi.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+#COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
 # flyctl
 EXPOSE 5000
 ENV ASPNETCORE_URLS=http://+:5000
