CreateSubject mentés soráni hibák kezelése

--- a/ServiceKretaAPI/ServiceKretaAPI.csproj
+++ b/ServiceKretaAPI/ServiceKretaAPI.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ApplicationProperties\ApplicationPropertiesSettings.csproj" />
     <ProjectReference Include="..\KretaParancssoriAlkalmazas\KretaParancssoriAlkalmazas.csproj" />
+    <ProjectReference Include="..\ServiceKretaLogger\ServiceKretaLogger.csproj" />
   </ItemGroup>
 
 </Project>
