--- a/KretaParancssoriAlkalmazas/KretaParancssoriAlkalmazas.csproj
+++ b/KretaParancssoriAlkalmazas/KretaParancssoriAlkalmazas.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ApplicationProperties\ApplicationPropertiesSettings.csproj" />
+    <ProjectReference Include="..\ServiceKretaLogger\ServiceKretaLogger.csproj" />
     <ProjectReference Include="..\StaticClasses\StaticClasses.csproj" />
   </ItemGroup>
 
