--- a/ServiceKreta/ServiceKreta.csproj
+++ b/ServiceKreta/ServiceKreta.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KretaParancssoriAlkalmazas\KretaParancssoriAlkalmazas.csproj" />
+    <ProjectReference Include="..\ServiceKretaLogger\ServiceKretaLogger.csproj" />
   </ItemGroup>
 
 </Project>
