--- a/KretaRazorPages/KretaRazorPages.csproj
+++ b/KretaRazorPages/KretaRazorPages.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\ServiceKretaLogger\ServiceKretaLogger.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\NewFolder\" />
+  </ItemGroup>
+
 </Project>
