--- a/KretaParancssoriAlkalmazasMsTest/KretaParancssoriAlkalmazasMsTest.csproj
+++ b/KretaParancssoriAlkalmazasMsTest/KretaParancssoriAlkalmazasMsTest.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>.net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>Kreta</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
