--- a/KretaWebApi/Dockerfile
+++ b/KretaWebApi/Dockerfile
@@ -1,3 +1,4 @@
+# API docker fájl
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 #FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine AS base
