--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,161 +23,38 @@ on:
   pull_request:
     branches: [ "production-desktop" ]
 
+env:
+ PROJECT_PATH: KretaDesktop/KretaDesktop.csproj
+
 jobs:
+ deploy:
+  runs-on: windows-latest
+  steps:
+    - uses: actions/checkout@v2
 
-  build:
-
-    strategy:
-
-    # The following build matrix allows builds across multiple configurations (Debug and Release) and production environments such as
-    # development, production for sideload applications and production for the Microsoft store.
-    # For more information, see https://help.github.com/en/actions/configuring-and-managing-workflows/configuring-a-workflow#configuring-a-build-matrix
-      matrix:
-        channel: [Dev, Prod_Sideload, Prod_Store]
-        targetPlatform: [x86, x64]
-        include:
-
-          # includes the following variables for the matrix leg matching Dev
-          - channel: Dev
-            ChannelName: Dev
-            Configuration: Debug
-            DistributionUrl: https://microsoft.github.io/github-actions-for-desktop-apps-distribution-dev
-            MsixPackageId: MyWPFApp.DevOpsDemo.Dev
-            MsixPublisherId: CN=GitHubActionsDemo
-            MsixPackageDisplayName: KretaDesktop (Dev)
-
-          # includes the following variables for the matrix leg matching Prod_Sideload
-          - channel: Prod_Sideload
-            Configuration: Release
-            ChannelName: Prod_Sideload
-            DistributionUrl: https://microsoft.github.io/github-actions-for-desktop-apps-distribution-prod
-            MsixPackageId: MyWPFApp.DevOpsDemo.ProdSideload
-            MsixPublisherId: CN=GitHubActionsDemo
-            MsixPackageDisplayName: KretaDesktop (ProdSideload)
-
-          # includes the following variables for the matrix leg matching Prod_Store
-          - channel: Prod_Store
-            Configuration: Release
-            ChannelName: Prod_Store
-            DistributionUrl:
-            MsixPackageId: MyWPFApp.DevOpsDemo.ProdStore
-            MsixPublisherId: CN=GitHubActionsDemo
-            MsixPackageDisplayName: KretaDesktop (ProdStore)
-
-    runs-on: windows-latest
-
-    env:
-      App_Packages_Archive: KretaDesktop.zip
-      App_Packages_Directory: KretaWindowsAlkalmazas
-      SigningCertificate: GitHubActionsDemo.pfx
-      Solution_Path: Kreta.sln
-      Test_Project_Path: KretaParancssoriAlkalmazasMsTest\KretaParancssoriAlkalmazasMsTest.csproj
-      Wpf_Project_Path: KretaWindowsAlkalmazas\Kreta.csproj
-      Wap_Project_Directory: 
-      Wap_Project_Name: 
-      Actions_Allow_Unsecure_Commands: true # Allows AddPAth and SetEnv commands
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+    - uses: actions/setup-dotnet@v1
       with:
-        fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
+        dotnet-version: 6.0.x
 
-    # Use Nerdbank.GitVersioning to set version variables: https://github.com/AArnott/nbgv
-    - name: Use Nerdbank.GitVersioning to set version variables
-      uses: dotnet/nbgv@master
-      id: nbgv
+    - run: dotnet restore  ${{ env.PROJECT_PATH }} -r win-x64
 
-    # Install the .NET Core workload
-    - name: Install .NET Core
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '6.0.x'
+    - run: dotnet build  ${{ env.PROJECT_PATH }} -c Release  --no-restore -p:PublishSingleFile=true
 
-    # Add  MsBuild to the PATH: https://github.com/microsoft/setup-msbuild
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.1
+    - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release  -r win-x64 --self-contained false -p:PublishSingleFile=true --no-build --output ./publish
 
-    # Update the appxmanifest before build by setting the per-channel values set in the matrix such as
-    # the Package.Identity.Version or the Package.Identity.Name, which allows multiple channels to be built.
-    - name: Update manifest version
-      run: |
-        [xml]$manifest = get-content ".\$env:Wap_Project_Directory\Package.appxmanifest"
-        $manifest.Package.Identity.Version = "${{ steps.nbgv.outputs.SimpleVersion }}.0"
-        $manifest.Package.Identity.Name = "${{ matrix.MsixPackageId }}"
-        $manifest.Package.Identity.Publisher = "${{ matrix.MsixPublisherId }}"
-        $manifest.Package.Properties.DisplayName = "${{ matrix.MsixPackageDisplayName }}"
-        $manifest.Package.Applications.Application.VisualElements.DisplayName = "${{ matrix.MsixPackageDisplayName }}"
-        $manifest.save(".\$env:Wap_Project_Directory\Package.appxmanifest")
-    # Decode the Base64 encoded Pfx
-    - name: Decode the Pfx
-      run: |
-        $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
-        $currentDirectory = Get-Location
-        $certificatePath = Join-Path -Path $currentDirectory -ChildPath $env:Wap_Project_Directory -AdditionalChildPath $env:SigningCertificate
-        [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
-      if: matrix.ChannelName != 'Prod_Store'
-
-    # Restore the application
-    - name:  Restore the Wpf application to populate the obj folder
-      run: msbuild $env:Solution_Path /t:Restore /p:Configuration=$env:Configuration /p:RuntimeIdentifier=$env:RuntimeIdentifier
-      env:
-        Configuration: ${{ matrix.Configuration }}
-        RuntimeIdentifier: win-${{ matrix.targetplatform }}
-
-    # Build the Windows Application Packaging project for Dev and Prod_Sideload
-    - name: Build the Windows Application Packaging Project (wapproj) for ${{ matrix.ChannelName }}
-      run: msbuild $env:Solution_Path /p:Platform=$env:TargetPlatform /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:BuildMode /p:AppxBundle=$env:AppxBundle /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
-      if: matrix.ChannelName != 'Prod_Store'
-      env:
-        AppxBundle: Never
-        AppInstallerUri: ${{ matrix.DistributionUrl }}
-        BuildMode: SideloadOnly
-        Configuration: ${{ matrix.Configuration }}
-        GenerateAppInstallerFile: True
-        TargetPlatform: ${{ matrix.targetplatform }}
-
-    # Build the Windows Application Packaging project for Prod_Store
-    - name: Build the Windows Application Packaging Project (wapproj) for ${{ matrix.ChannelName }}
-      run: msbuild $env:Solution_Path /p:Platform=$env:TargetPlatform /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:BuildMode /p:AppxBundle=$env:AppxBundle /p:GenerateAppInstallerFile=$env:GenerateAppInstallerFile /p:AppxPackageSigningEnabled=$env:AppxPackageSigningEnabled
-      if: matrix.ChannelName == 'Prod_Store'
-      env:
-        AppxBundle: Never
-        AppxPackageSigningEnabled: False
-        BuildMode: StoreUpload
-        Configuration: ${{ matrix.Configuration }}
-        GenerateAppInstallerFile: False
-        TargetPlatform: ${{ matrix.targetplatform }}
-
-    # Remove the .pfx
-    - name: Remove the .pfx
-      run: Remove-Item -path $env:Wap_Project_Directory\$env:SigningCertificate
-      if: matrix.ChannelName != 'Prod_Store'
-
-    # Archive the package
-    - name: Create archive
-      run: Compress-Archive -Path $env:Wap_Project_Directory\$env:App_Packages_Directory\* -DestinationPath $env:Wap_Project_Directory\$env:App_Packages_Directory\$env:App_Packages_Archive
-
-    # Create the release:  https://github.com/actions/create-release
-    - name: Create release
+    - uses: actions/create-release@v1
       id: create_release
-      uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref}}.${{matrix.ChannelName}}.${{ matrix.targetplatform }}
-        release_name:  ${{ github.ref }}.${{ matrix.ChannelName }}.${{ matrix.targetplatform }}
-        draft: false
-        prerelease: false
-
-    # Upload release asset:   https://github.com/actions/upload-release-asset
-    - name: Update release asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+    - run: |
+           dir
+           cd publish
+           dir
+    - uses: csexton/release-asset-action@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}  # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ${{ env.Wap_Project_Directory }}\${{ env.App_Packages_Directory }}\${{ env.App_Packages_Archive }}
-        asset_name: ${{ env.App_Packages_Archive }}
-        asset_content_type: application/zip
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          pattern: ./publish/*.*
+          release-url: ${{ steps.create_release.outputs.upload_url }}
