--- a/KretaDesktop/KretaDesktop.csproj
+++ b/KretaDesktop/KretaDesktop.csproj
@@ -6,6 +6,15 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    <RuntimeIdentifiers>win-x64;win-x86</RuntimeIdentifiers>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>false</SelfContained>
+    <Version>0.2.0.0</Version>
+    <Authors>Gyuris Csaba</Authors>
+    <Company>Vasvári</Company>
+    <Product />
+    <Description>Vizsgaremek</Description>
+    <Copyright></Copyright>
   </PropertyGroup>
 
   <ItemGroup>
