Projekt fájl javítva

--- a/KretaDesktop/KretaDesktop.csproj
+++ b/KretaDesktop/KretaDesktop.csproj
@@ -3,12 +3,10 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
-    <EnableWindowsTargeting>true</EnableWindowsTargeting>
-    <RuntimeIdentifiers>win-x64;win-x86</RuntimeIdentifiers>
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>false</SelfContained>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <UseWPF>true</UseWPF>
     <Version>0.2.0.0</Version>
     <Authors>Gyuris Csaba</Authors>
     <Company>Vasvári</Company>
