--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,7 +44,7 @@ jobs:
            dir
 
 
-    - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release  -r win-x64 --self-contained false -p:PublishSingleFile=true --no-build --output ./publish
+    - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release  -r win-x64 --self-contained false /p:DebugType=None /p:DebugSymbols=false  -p:PublishSingleFile=true --no-build --output ./publish
 
     - uses: actions/create-release@v1
       id: create_release
