--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -3,19 +3,19 @@
 version: '3.1'
 
 services:
-    testdb_mysql:
-        image: testdb_mysql
+    kretamysql:
+        image: kretamysql
         restart: always
         command: --default-authentication-plugin=mysql_native_password --local-infile --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
         environment:
-            MYSQL_ROOT_PASSWORD: example
-            MYSQL_DATABASE: "test_data"
-            MYSQL_USER: user
-            MYSQL_PASSWORD: password
+            MYSQL_ROOT_PASSWORD: kreta
+ #           MYSQL_DATABASE: "kretamysql"
+            MYSQL_USER: kretamysql
+            MYSQL_PASSWORD: kreta
             LANG: C.UTF-8 # sets the encoding in the init.db scripts which are otherwise assumed to be ascii
         ports:
             - 3306:3306
-        container_name: testdb_mysql
+        container_name: ckretamysql
         volumes:
           - /tmp:/tmp
 #          - container-volumes:/var/lib/mysql
