Container kb. kész

--- a/KretaWebApi/appsettings.json
+++ b/KretaWebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "mysqlconnection": {
-    "connectionString": "server=cskstudiorumkft.x10.mx;userid=zbccmner_kreta;password=Kreta1;database=zbccmner_kreta;"
+    "connectionString": "server=172.20.0.2;userid=root;password=kreta;database=kreta;"
   },
   "AllowedHosts": "*"
 }
