--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,8 @@ services:
         build:
             context: .
             dockerfile: ./KretaRazorPages/Dockerfile
+        ports:
+            - 80:80
         networks:
             kreta-network:
                 ipv4_address: 172.20.0.4
