--- a/KretaRazorPages/Dockerfile
+++ b/KretaRazorPages/Dockerfile
@@ -24,7 +24,7 @@ RUN dotnet publish "KretaRazorPages.csproj" -c Release -o /app/publish /p:UseApp
 
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/build .
+COPY --from=publish /app/publish .
 EXPOSE 80
 # ENV ASPNETCORE_URLS=http://+:5000
 ENTRYPOINT ["dotnet", "KretaRazorPages.dll"]
