--- a/KretaWebApi/Properties/launchSettings.json
+++ b/KretaWebApi/Properties/launchSettings.json
@@ -10,7 +10,8 @@
   "profiles": {
     "KretaWebApi": {
       "commandName": "Project",
-      "launchBrowser": true,
+      //"launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -29,7 +30,8 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": true,
+      "httpPort": 5000
     }
   }
 }
