--- a/KretaWebApi/Dockerfile
+++ b/KretaWebApi/Dockerfile
@@ -4,7 +4,7 @@
 #FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine AS base
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-focal AS base
 WORKDIR /app
-EXPOSE 80
+EXPOSE 5000
 EXPOSE 443
 
 #FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
@@ -31,6 +31,6 @@ WORKDIR /app
 COPY --from=build /app/build ./
 # flyctl
 EXPOSE 5000
-#ENV ASPNETCORE_URLS=http://+:5000
+ENV ASPNETCORE_URLS=http://+:5000
 # flyctl
 ENTRYPOINT ["dotnet", "KretaWebApi.dll"]
