--- a/KretaWebApi/Dockerfile
+++ b/KretaWebApi/Dockerfile
@@ -5,7 +5,7 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-focal AS base
 WORKDIR /app
 EXPOSE 5000
-EXPOSE 443
+#EXPOSE 443
 
 #FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
 FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build
