--- a/vue/package.json
+++ b/vue/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "bootstrap-icons": "^1.9.1",
+    "bootstrap-icons-vue": "^1.8.1",
     "bootstrap-vue": "^2.22.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
