Sokminden jó, első adatfelvitel nem

--- a/KretaWebApi/appsettings.json
+++ b/KretaWebApi/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "mysqlconnection": {
-    "connectionString": "server=172.20.0.2;userid=root;password=kreta;database=kreta;"
+    //"connectionString": "server=172.20.0.2;userid=root;password=kreta;database=kreta;",
+    "connectionString": "server=localhost;userid=root;password=;database=kreta;"
   },
   "AllowedHosts": "*"
 }
